# qt_chemistry

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/kernel/: CMakeLists.txt  ChemFormat.cpp  ChemFormat.h  DatabaseInfo.cpp  DatabaseInfo.h  EditableDatabase.cpp  EditableDatabase.h  EquilibriumProblem.cpp  EquilibriumProblem.h  PhreeqcOutputParser.cpp  PhreeqcOutputParser.h  PhreeqcSession.cpp  PhreeqcSession.h
src/ui/: CMakeLists.txt  ChemDelegate.cpp  ChemDelegate.h  DatabaseEditorDialog.cpp  DatabaseEditorDialog.h  EntryEditForm.cpp  EntryEditForm.h  HtmlDelegate.cpp  HtmlDelegate.h  MainWindow.cpp  MainWindow.h  SolutionPanel.cpp  SolutionPanel.h
tests/: CMakeLists.txt  editable_database_test.cpp  kernel_smoke_test.cpp
